tests/rosetta/out/Fortran/blum-integer.error
gfortran: exit status 1
/tmp/blum-integer.f90:21:3:

   21 |   main()
      |   1
Error: Unclassifiable statement at (1)
/tmp/blum-integer.f90:125:15:

  125 |     blum = (//)
      |               1
Error: Empty array constructor at (1) is not allowed
/tmp/blum-integer.f90:110:5:

  110 |     s = s1
      |     1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/blum-integer.f90:99:5:

   99 |     s = s0
      |     1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/blum-integer.f90:134:33:

  134 |         if (((mod(((q /= p) .and. q),4) == 3) .and. isPrime(q))) then
      |                                 1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/blum-integer.f90:159:24:

  159 |                 line = (line + padLeft(blum(((idx)+1)),3)) // ' '
      |                        1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/blum-integer.f90:163:38:

  163 |               print *, line(0+1:(size(line) - 1))
      |                                      1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/blum-integer.f90:85:24:

   85 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
